--- a/frontend/src/app/question/question.component.css
+++ b/frontend/src/app/question/question.component.css
@@ -15,6 +15,17 @@
   border-width: 0 2px 0 0;
 }
 
+.ansColor {
+  background-color: green;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.wrongAnsColor {
+  background-color: red;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.16),
+    0px 0px 0px 3px rgba(51, 51, 51, 1);
+}
+
 /* timer */
 .circle {
   /* margin: auto;
@@ -43,7 +54,13 @@
 /* timer */
 
 .colors {
-  background-color: red;
+  border-color: red;
+  box-shadow: rgba(82, 144, 236, 0.527) 0px -23px 25px 0px inset,
+    rgba(199, 27, 27, 0.15) 0px -36px 30px 0px inset,
+    rgba(132, 139, 241, 0.1) 0px -79px 40px 0px inset,
+    rgba(73, 192, 247, 0.06) 0px 2px 1px, rgba(206, 209, 9, 0.09) 0px 4px 2px,
+    rgba(247, 247, 247, 0.09) 0px 8px 4px, rgba(8, 184, 22, 0.09) 0px 16px 8px,
+    rgba(240, 235, 235, 0.09) 0px 32px 16px;
 }
 
 .bottombtn {
