--- a/frontend/src/app/question/question.component.css
+++ b/frontend/src/app/question/question.component.css
@@ -65,12 +65,22 @@
 
 .bottombtn {
   background-color: white;
-  padding: 0.6rem;
   font-size: 1.5em;
   border-radius: 12px;
-
+  padding: 0 3.5rem;
   cursor: pointer;
 }
+
+.btnEnd{
+  background-color: white;
+  font-size: 1.5em;
+  border-radius: 12px;
+  padding: 0 3.5rem;
+  cursor: pointer;
+  background-color: rgb(243, 49, 49);
+}
+
+
 
 .bottombtn:hover {
   --tw-bg-opacity: 1;
@@ -91,4 +101,20 @@ button {
 
 .pause__btn:hover {
   background-color: rgb(243, 49, 49);
+}
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.781);
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
 }
