--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,6 +1,94 @@
-<div class=" bgimage1 bg-[rgba(3,25,68,255)]">
-    <div class="flex  flex-col justify-center items-center h-screen w-screen">
-        <div class="flex flex-col justify-center items-center w-3/4 h-1/2 bg-slate-200 rounded-lg bgimage1 bg-gray-700">
+<div class=" bgimage1  w-screen h-screen">
+    <div class="logo" routerLink="/questions">
+        <div class="rings">
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="ring">
+                <div class="rin"></div>
+            </div>
+            <div class="border"></div>
+
+        </div>
+        <div class="diamond"></div>
+        <div class="diamond"></div>
+        <div class="diamond"></div>
+        <div class="diamond"></div>
+        <div class="mainHeading">Ek aur sawaal</div>
+        <div class="subHeading1">
+            <div class="char">&nbsp;</div>
+            <div class="char">R</div>
+            <div class="char">E</div>
+            <div class="char">A</div>
+            <div class="char">L</div>
+            <div class="char">&nbsp;</div>
+            <div class="char">P</div>
+            <div class="char">A</div>
+            <div class="char">G</div>
+            <div class="char">E</div>
+        </div>
+        <div class="subHeading2">
+            <div class="char">&nbsp;</div>
+            <div class="char">R</div>
+            <div class="char">E</div>
+            <div class="char">A</div>
+            <div class="char">L</div>
+            <div class="char">&nbsp;</div>
+            <div class="char">P</div>
+            <div class="char">A</div>
+            <div class="char">G</div>
+            <div class="char">E</div>
+        </div>
+    </div>
+    <!-- <div class="flex flex-col justify-center items-center w-3/4 h-1/2 bg-slate-200 rounded-lg bgimage1 bg-gray-700">
 
             <div class="mb-5 w-3/4 ">
                 <input type="text" class="form-control text-2xl placeholder-gray-400 placeholder:ease-in-out"
@@ -24,8 +112,7 @@
                     Game</span>
             </button>
 
-        </div>
-    </div>
+        </div> -->
 
 
 </div>
